traefik.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: kube-public
  labels:
    app: traefik
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-service-account
      restartPolicy: Always
      containers:
        - name: traefik
          image: traefik:3.1
          resources:
            limits:
              memory: "128M"
              cpu: "500m"
          ports:
            - name: web
              containerPort: 80
            - name: dashboard
              containerPort: 8080
          args:
            - "--api.insecure=true"
            - "--providers.kubernetesingress"
            - "--entrypoints.web.address=:80"
            - "--log.level=INFO"
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - traefik
              topologyKey: "kubernetes.io/hostname"
